--- a/jpegTransformerAppv1/pom.xml
+++ b/jpegTransformerAppv1/pom.xml
@@ -11,4 +11,12 @@
         <maven.compiler.target>19</maven.compiler.target>
         <exec.mainClass>com.mycompany.jpegtransformerappv1.JpegTransformerAppv1</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.github.wendykierp</groupId>
+            <artifactId>JTransforms</artifactId>
+            <version>3.1</version>
+            <classifier>with-dependencies</classifier>
+        </dependency>
+    </dependencies>
 </project>
